[tool.poetry]
name = "rohlik-orders-forecasting-challenge"
version = "0.1.0"
description = "This is the historical orders data for selected Rohlik warehouses. The task is to forecast the \"orders\" column for the test set. Some features are not available in test as they are not known at the moment of making the prediction (e.g. precipitation, shutdown, user activity on website)."
authors = ["Srushanth Baride <SrushanthBaride@Gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.5.0"
pandas = "^2.2.2"
xgboost = "^2.1.0"
mlflow = "^2.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
