[tool.poetry]
name = "rohlik-orders-forecasting-challenge"
version = "0.1.0"
description = "This is the historical orders data for selected Rohlik warehouses. The task is to forecast the \"orders\" column for the test set. Some features are not available in test as they are not known at the moment of making the prediction (e.g. precipitation, shutdown, user activity on website)."
authors = ["Srushanth Baride <SrushanthBaride@Gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
scikit-learn = ">=1.3.0,<1.4.1"
pandas = "^2.2.2"
xgboost = ">=1.6,<2.1"
mlflow = "^2.14.1"
kfp = "^2.8.0"
neptune = "^1.10.4"
pynvml = "^11.5.0"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow = "2.16.2"
keras = "^3.4.1"
statsmodels = "^0.14.2"
autogluon = ">=1.1.1,<2.0.0"
catboost = "^1.2.5"
lightgbm = ">=3.3,<4.4"
seaborn = "^0.13.2"
plotly = "^5.22.0"
nbformat = "^5.10.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
